Fix overflow scrolling wrapper

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ a{
     background: transparent;
     position: relative;
     top: 2em;
-    z-index: 2;
+    z-index: 1;
     height: 30px;
     width: 100%;
 }
@@ -193,7 +193,7 @@ nav li:hover{
     display: none;
     text-align: left;
     padding: 2em;
-    z-index: 4;
+    z-index: 2;
 }
 
 .menu-category{
@@ -347,6 +347,7 @@ main{
 .row{
     display: flex;
     width: 100%;
+    overflow: scroll;
 }
 
 .shopify-section{
@@ -792,6 +793,7 @@ hr{
     .toast-logo{
         display: block;
         margin: 43%;
+        z-index: 0;
     }
 
     nav ul li a{
@@ -845,5 +847,14 @@ hr{
     .site-header-right,
     .site-header_store-selector{
         display: none;
+    }
+    .site-navigation{
+        position: absolute;
+        left: 0;
+        display: none;
+        z-index: -2;
+    }
+    .col-12{
+        width: 100%;
     }
 }
